Added html {min-height: 100%}
For background image height on mobile browsers

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				-moz-background-size: cover;
 				-o-background-size: cover;
 				background-size: cover;
+				min-height: 100%;
 			}			
 			body {
 				font-family: 'Open Sans', sans-serif;
