--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Home | Selena Panchoo</title>
 
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-		<script src="https://raw.githubusercontent.com/mattboldt/typed.js/master/js/typed.js"></script>
+		<script src="typed.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:100" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 		<style>
