Fixed bg image filename

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 		<style>
 			html {
-				background: linear-gradient(rgba(178, 0, 121,.5), rgba(178, 0, 121,.5)), url(bg_snall.png) no-repeat left center fixed; 
+				background: linear-gradient(rgba(178, 0, 121,.5), rgba(178, 0, 121,.5)), url(bg_small.png) no-repeat left center fixed; 
 				-webkit-background-size: cover;
 				-moz-background-size: cover;
 				-o-background-size: cover;
